--- a/thesis/src/app/views/login/login.component.html
+++ b/thesis/src/app/views/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="page-header" filter-color="orange">
-    <div class="page-header-image" style="background-image:url(assets/img/login.jpg)"></div>
+    <div class="page-header-image" style="background-image:url(assets/img/project6.jpg)"></div>
     <div class="content-center">
         <div class="container">
             <div class="col-md-4 content-center">
