home page and post component

--- a/thesis/src/app/views/company/company.component.html
+++ b/thesis/src/app/views/company/company.component.html
@@ -101,21 +101,13 @@
 </div>
 
 
+
 <div class="pricing-2">
     <div class="container">
         <div class="row">
             <div class="col-md-6 ml-auto mr-auto text-center">
                 <h2 class="title">Pick the best plan for you</h2>
-                <ngb-tabset type="pills" class="nav nav-pills nav-pills-primary justify-content-center">
-                    <ngb-tab title="Legal Entity">
-                        <ng-template ngbTabContent>
-                        </ng-template>
-                    </ngb-tab>
-                    <ngb-tab title="Individual">
-                        <ng-template ngbTabContent>
-                        </ng-template>
-                    </ngb-tab>
-                </ngb-tabset>
+                
             </div>
         </div>
         <div class="row">
@@ -124,7 +116,7 @@
                     <div class="card-body">
                         <h6 class="category">Enterprise</h6>
                         <h1 class="card-title">
-                            <small>$</small>59</h1>
+                            <small>DT</small>59</h1>
                         <ul>
                             <li>
                                 <b>10GB</b> Disk Space</li>
@@ -146,7 +138,7 @@
                     <div class="card-body">
                         <h6 class="category text-info">Professional</h6>
                         <h1 class="card-title">
-                            <small>$</small>29</h1>
+                            <small>DT</small>29</h1>
                         <ul>
                             <li>
                                 <b>5GB</b> Disk Space</li>
@@ -168,7 +160,7 @@
                     <div class="card-body">
                         <h6 class="category">Standard</h6>
                         <h1 class="card-title">
-                            <small>$</small>17</h1>
+                            <small>DT</small>17</h1>
                         <ul>
                             <li>
                                 <b>2GB</b> Disk Space</li>
@@ -188,4 +180,3 @@
         </div>
     </div>
 </div>
-
