--- a/thesis/src/app/views/profil/profil.component.html
+++ b/thesis/src/app/views/profil/profil.component.html
@@ -1,3 +1,4 @@
+<app-navbar3></app-navbar3>
 <div class="wrapper">
     <div class="page-header page-header-small" filter-color="orange">
         <div class="page-header-image rellax-header" data-rellax-speed="-8" style="background-image: url('assets/img/project5.jpg') ;">
