--- a/thesis/src/app/views/searchu/searchu.component.html
+++ b/thesis/src/app/views/searchu/searchu.component.html
@@ -1,4 +1,4 @@
-
+<app-navbar3></app-navbar3>
 <div class="wrapper">
     <div class="page-header page-header-small">
         <div class="page-header-image rellax-header" data-rellax-speed="-8" style="background-image: url('assets/img/bg32.jpg');">
@@ -61,7 +61,8 @@
             <a class="dropdown-item" href="#">Bizerte</a>
             <a class="dropdown-item" href="#">Nabeul</a>
             <a class="dropdown-item" href="#">Sousse</a>
-            <a class="dropdown-item" href="#">Mednin</a>
+            <a class="dropdown-item" href="#">Tunis</a>
+            <a class="dropdown-item" href="#">Sfax</a>
             </div>
         </div>
         
