signup for the front and back

--- a/thesis/src/app/shared/navbar/navbar.component.html
+++ b/thesis/src/app/shared/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="collapse navbar-collapse" data-nav-image="assets/img/blurred-image-1.jpg" data-color="orange">
             <ul class="navbar-nav ml-auto">
-                <a ngbDropdown class="nav-item dropdown">
+                <a *ngIf=!storage ngbDropdown class="nav-item dropdown">
                     <div class="nav-link dropdown-toggle" ngbDropdownToggle>
                       <i class="now-ui-icons design_image" aria-hidden="true"></i>
                       <p>SIGN UP</p>
@@ -22,9 +22,14 @@
                         <a class="dropdown-item" [routerLink]="['/views/company']"><i class="now-ui-icons text_align-left"></i>Company</a>
                     </div>
                 </a>
-                <li class="nav-item">
+                <li *ngIf=!storage class="nav-item">
                     <a class="nav-link btn btn-primary" [routerLink]="['/views/login']">
                        <p>LOGIN</p>
+                    </a>
+                </li>
+                <li *ngIf=storage class="nav-item">
+                    <a class="nav-link btn btn-primary" (click)="logout()" [routerLink]="['/views/login']">
+                       <p>LOGOUT</p>
                     </a>
                 </li>
             </ul>
