--- a/thesis/src/app/views/login/login.component.html
+++ b/thesis/src/app/views/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="col-md-4 content-center">
                 <div class="card card-login card-plain">
-                    <form class="form" method="" action="">
+                    <form class="form" method="" action=""  (ngSubmit)="onSubmit()">
                         <div class="card-header text-center">
                             <div class="logo-container">
                                 <img src="assets/img/now-logo.png" alt="">
@@ -15,17 +15,19 @@
                               <div class="input-group-prepend">
                                   <span class="input-group-text">  <i class="now-ui-icons users_circle-08"></i></span>
                               </div>
-                                <input type="text" class="form-control" placeholder="your email..." (focus)="focus=true" (blur)="focus=false" >
+                                <input type="text" name="email" [(ngModel)]="email" class="form-control" placeholder="your email..." (focus)="focus=true" (blur)="focus=false" >
                             </div>
                             <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus1===true}">
                               <div class="input-group-prepend">
                                   <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
                               </div>
-                                <input type="text" placeholder="Password..." class="form-control" (focus)="focus1=true" (blur)="focus1=false"/>
+                                <input type="text" name="password" [(ngModel)]="password" placeholder="Password..." class="form-control" (focus)="focus1=true" (blur)="focus1=false"/>
                             </div>
                         </div>
                         <div class="card-footer text-center">
-                            <a [routerLink]="['/views/profil']" class="btn btn-primary btn-round btn-lg btn-block">LOGIN</a>
+                           
+                            <input   type="submit" value="LOGIN" class="btn btn-primary btn-round btn-lg btn-block">
+                          
                         </div>
                         <a [routerLink]="['/views/landing']">
                             About Uss
