--- a/thesis/src/app/views/searchc/searchc.component.html
+++ b/thesis/src/app/views/searchc/searchc.component.html
@@ -28,22 +28,22 @@
         <div ngbDropdown class="dropdown" placement="bottom-right">
             <button class="btn btn-default dropdown-toggle" ngbDropdownToggle>Field</button>
             <div ngbDropdownMenu>
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" >Action</a>
+            <a class="dropdown-item" >Another action</a>
             </div>
         </div>
         <div ngbDropdown class="dropdown" placement="bottom-right">
             <button class="btn btn-default dropdown-toggle" ngbDropdownToggle>Education level</button>
             <div ngbDropdownMenu>
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" >Action</a>
+            <a class="dropdown-item" >Another action</a>
             </div>
         </div>
         <div ngbDropdown class="dropdown" placement="bottom-right">
             <button class="btn btn-default dropdown-toggle" ngbDropdownToggle>Years of experience</button>
             <div ngbDropdownMenu>
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" >Action</a>
+            <a class="dropdown-item" >Another action</a>
             </div>
         </div>
     </div>
@@ -66,7 +66,7 @@
                             <div class="row">
                                 <div class="col-md-5">
                                     <div class="card-image">
-                                        <a href="#pablo">
+                                        <a >
                                             <img class="img img-raised rounded" src="assets/img/olivia.jpg" />
                                         </a>
                                     </div>
@@ -79,9 +79,9 @@
                                             Think in the morning. Act in the noon. Eat in the evening. Sleep in the night......
                                         </p>
                                         <div class="card-footer">
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-twitter"><i class="fa fa-twitter"></i></a>
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-facebook"><i class="fa fa-facebook-square"></i></a>
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-google"><i class="fa fa-google"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-twitter"><i class="fa fa-twitter"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-facebook"><i class="fa fa-facebook-square"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-google"><i class="fa fa-google"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -93,7 +93,7 @@
                             <div class="row">
                                 <div class="col-md-5">
                                     <div class="card-image">
-                                        <a href="#pablo">
+                                        <a>
                                             <img class="img img-raised rounded" src="assets/img/emily.jpg" />
                                         </a>
                                     </div>
@@ -106,10 +106,10 @@
                                             Love cures people - both the ones who give it and the ones who receive it...
                                         </p>
                                         <div class="card-footer">
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-linkedin"><i class="fa fa-linkedin"></i></a>
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-facebook"><i class="fa fa-facebook-square"></i></a>
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-dribbble"><i class="fa fa-dribbble"></i></a>
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-google"><i class="fa fa-google"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-facebook"><i class="fa fa-facebook-square"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-dribbble"><i class="fa fa-dribbble"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-google"><i class="fa fa-google"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -121,7 +121,7 @@
                             <div class="row">
                                 <div class="col-md-5">
                                     <div class="card-image">
-                                        <a href="#pablo">
+                                        <a>
                                             <img class="img img-raised rounded" src="assets/img/james.jpg" />
                                         </a>
                                     </div>
@@ -134,9 +134,9 @@
                                             Keep your face always toward the sunshine - and shadows will fall behind you...
                                         </p>
                                         <div class="card-footer">
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-youtube"><i class="fa fa-youtube-play"></i></a>
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-twitter"><i class="fa fa-twitter"></i></a>
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-instagram"><i class="fa fa-instagram"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-youtube"><i class="fa fa-youtube-play"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-twitter"><i class="fa fa-twitter"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-instagram"><i class="fa fa-instagram"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -148,7 +148,7 @@
                             <div class="row">
                                 <div class="col-md-5">
                                     <div class="card-image">
-                                        <a href="#pablo">
+                                        <a>
                                             <img class="img img-raised rounded" src="assets/img/michael.jpg" />
                                         </a>
                                     </div>
@@ -161,9 +161,9 @@
                                             There is only one corner of the universe you can be certain of improving, and that's your own self...
                                         </p>
                                         <div class="card-footer">
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-linkedin"><i class="fa fa-linkedin"></i></a>
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-facebook"><i class="fa fa-facebook-square"></i></a>
-                                            <a href="#pablo" class="btn btn-icon btn-neutral btn-google"><i class="fa fa-google"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-linkedin"><i class="fa fa-linkedin"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-facebook"><i class="fa fa-facebook-square"></i></a>
+                                            <a class="btn btn-icon btn-neutral btn-google"><i class="fa fa-google"></i></a>
                                         </div>
                                     </div>
                                 </div>
