--- a/thesis/src/app/shared/navbar/navbar.component.html
+++ b/thesis/src/app/shared/navbar/navbar.component.html
@@ -18,8 +18,8 @@
                       <p>SIGN UP</p>
                     </div>
                     <div ngbDropdownMenu class="dropdown-menu dropdown-menu-right">
-                        <a class="dropdown-item" [routerLink]="['/views/signup']"><i class="now-ui-icons business_bulb-63"></i>Condidat</a>
-                        <a class="dropdown-item" [routerLink]="['/views/company']"><i class="now-ui-icons text_align-left"></i>Company</a>
+                        <a class="dropdown-item" [routerLink]="['/views/signup']"> <i class="now-ui-icons users_single-02"></i>Condidat</a>
+                        <a class="dropdown-item" [routerLink]="['/views/company']"> <i class="now-ui-icons business_bank"></i>Company</a>
                     </div>
                 </a>
                 <li class="nav-item">
