--- a/thesis/src/app/views/calendar/calendar.component.html
+++ b/thesis/src/app/views/calendar/calendar.component.html
@@ -1,13 +1,10 @@
 <div class="panel-header">
   <div class="header text-center">
-    <h2 class="title">FullCalendar.io</h2>
+    <h2 class="title">Your Calendar</h2>
     <p class="category">
-      Handcrafted by our friends from
-      <a target="_blank" href="https://fullcalendar.io/">FullCalendar.io</a>.
-      Please checkout their
-      <a href="https://fullcalendar.io/docs/" target="_blank"
-        >full documentation</a
-      >.
+      <a target="_blank" href="https://fullcalendar.io/">Don't Forget Your Interview </a>
+     
+     
     </p>
   </div>
 </div>
