--- a/thesis/src/app/views/create-cv/create-cv.component.html
+++ b/thesis/src/app/views/create-cv/create-cv.component.html
@@ -1,51 +1,125 @@
-<div class="page-header" filter-color="orange">
-  <div class="page-header-image" ></div>
-  <div class="content-center">
-      <div class="container">
-          <div class="col-md-4 content-center">
-              <div class="card card-login card-plain">
-                  <form class="form" method="" action="">
-                      <!-- <div class="card-header text-center">
-                          <div class="logo-container">
-                              <img src="assets/img/now-logo.png" alt="">
-                          </div>
-                      </div> -->
-                      <div class="card-body">
-                          <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"> <i class="now-ui-icons users_circle-08"></i></span>
-                            </div>
-                              <input type="text" class="form-control" placeholder="Email..." (focus)="focus=true" (blur)="focus=false" >
-                          </div>
-                          <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus1===true}">
-                            <div class="input-group-prepend">
-                                <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
-                            </div>
-                              <input type="text" placeholder="Password..." class="form-control" (focus)="focus1=true" (blur)="focus1=false"/>
-                          </div>
-                      </div>
-                      <!-- <div class="card-footer text-center">
-                          <a [routerLink]="['/views/profil']" class="btn btn-primary btn-round btn-lg btn-block">LOGIN</a>
-                      </div>
-                      <a [routerLink]="['/views/landing']">
-                          About Uss
-                      </a> -->
-                  </form>
-              </div>
-          </div>
-      </div>
+<div class="wrapper">
+  <div class="page-header page-header-small">
+    <div class="page-header-image rellax-header" data-rellax-speed="-8"
+      style="background-image:  url('assets/img/create-cv.jpg');">
+    </div>
   </div>
-  <footer class="footer ">
+  <div class="main">
+    <div class="contact-content">
       <div class="container">
-          <nav>
-              <ul>
-                  <li>
-                      <!-- <a [routerLink]="['/views/landing']">
-                          About Uss
-                      </a> -->
-                  </li>
-              </ul>
-          </nav>
+        <div class="row">
+          <div class="col-md-12 ml-auto mr-auto">
+            <h2 class="title">Send us a message</h2>
+            <p class="description">You can contact us with anything related to our Products. We'll get in touch with you
+              as soon as possible.
+              <br>
+              <br>
+            </p>
+            <div class="row">
+              <div class="col-md-6">
+
+                <label>Your name</label>
+                <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="now-ui-icons users_circle-08"></i></span>
+                  </div>
+                  <input type="text" class="form-control" placeholder="Your Name..." (focus)="focus=true"
+                    (blur)="focus=false">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <label>Email address</label>
+                <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"><i class="now-ui-icons ui-1_email-85"></i></span>
+                  </div>
+                  <input type="email" class="form-control" placeholder="Email Here..." (focus)="focus1=true"
+                    (blur)="focus1=false">
+                </div>
+
+              </div>
+            </div>
+            <label>Phone</label>
+            <div class="input-group" [ngClass]="{'input-group-focus':focus2===true}">
+              <div class="input-group-prepend">
+                <span class="input-group-text"> <i class="now-ui-icons tech_mobile"></i></span>
+              </div>
+              <input type="text" placeholder="Number Here..." class="form-control" (focus)="focus2=true"
+                (blur)="focus2=false">
+            </div>
+            <div class="form-group">
+              <label>Profil Presentation</label>
+              <textarea name="message" class="form-control" id="message" rows="6"></textarea>
+            </div>
+            <div class="row">
+              <div class="col-lg-6 col-md-8 col-sm-5">
+                <app-multiselect
+                [single]="true"
+                [text]="'Select Single test'"
+                [dropdownList]="dropdownList"
+                [selectedItems]="selectedItems"
+                (itemSelect)="console.log($event)"
+                (itemDeSelect)="console.log($event)"
+                (selectAll)="console.log($event)"
+                (deSelectAll)="console.log($event)"
+                ></app-multiselect>
+              </div> 
+              <div class="col-lg-6 col-md-8 col-sm-5">
+                <app-multiselect
+                [single]="false"
+                [text]="'Select Multiple test'"
+                [dropdownList]="dropdownList1"
+                [selectedItems]="selectedItems1"
+                (itemSelect)="test($event)"
+                (itemDeSelect)="test($event)"
+                (selectAll)="test($event)"
+                (deSelectAll)="test($event)"
+                ></app-multiselect>
+              </div>
+            </div>
+
+
+            <div class="submit text-center">
+              <input type="submit" class="btn btn-primary btn-raised btn-round" value="Contact Us" />
+            </div>
+
+          </div>
+        </div>
       </div>
+    </div>
+  </div>
+
+  <footer class="footer footer-default ">
+    <div class="container">
+      <nav>
+        <ul>
+          <li>
+            <a href="https://www.creative-tim.com">
+              Creative Tim
+            </a>
+          </li>
+          <li>
+            <a href="https://www.creative-tim.com/about-us">
+              About Us
+            </a>
+          </li>
+          <li>
+            <a href="http://blog.creative-tim.com">
+              Blog
+            </a>
+          </li>
+          <li>
+            <a href="https://www.creative-tim.com/license">
+              License
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="copyright">
+        © {{data | date: 'yyyy'}}, Designed by
+        <a href="https://www.invisionapp.com" target="_blank">Invision</a>. Coded by
+        <a href="https://www.creative-tim.com" target="_blank">Creative Tim</a>.
+      </div>
+    </div>
   </footer>
 </div>
