--- a/thesis/src/app/views/login/login.component.html
+++ b/thesis/src/app/views/login/login.component.html
@@ -22,12 +22,12 @@
                               <div class="input-group-prepend">
                                   <span class="input-group-text"><i class="now-ui-icons text_caps-small"></i></span>
                               </div>
-                                <input type="text" name="password" [(ngModel)]="password" placeholder="Password..." class="form-control" (focus)="focus1=true" (blur)="focus1=false"/>
+                                <input type="password" name="password" [(ngModel)]="password" placeholder="Password..." class="form-control" (focus)="focus1=true" (blur)="focus1=false"/>
                             </div>
                         </div>
                         <div class="card-footer text-center">
                            
-                            <input   type="submit" value="LOGIN" class="btn btn-primary btn-round btn-lg btn-block">
+                            <input type="submit" value="LOGIN" class="btn btn-primary btn-round btn-lg btn-block">
                           
                         </div>
                         <a [routerLink]="['/views/landing']">
