--- a/thesis/src/app/views/signup/signup-u.component.html
+++ b/thesis/src/app/views/signup/signup-u.component.html
@@ -48,32 +48,32 @@
                                
                                 <h5 class="card-description"> Candidate </h5>
                             </div>
-                            <form class="form" method="" action="" (ngSubmit)="onSubmit()" >
+                            <form class="form" method="" action=""  (ngSubmit)="onSubmit()" >
                                 <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
                                   <div class="input-group-prepend">
                                       <span class="input-group-text">  <i class="now-ui-icons users_circle-08"></i></span>
                                   </div>
-                                    <input type="text" name="name" [(ngModel)]="name" class="form-control" placeholder="Your First Name..." (focus)="focus=true" (blur)="focus=false">
+                                    <input type="text" name="name" [(ngModel)]="name" class="form-control" placeholder="Your First Name..." (focus)="focus=true" (blur)="focus=false" />
                                 </div>
                                 <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
                                   <div class="input-group-prepend">
                                       <span class="input-group-text">  <i class="now-ui-icons text_caps-small"></i></span>
                                   </div>
-                                    <input type="text" name="lasttname" [(ngModel)]="lastname" placeholder="Your Last Name..." class="form-control" (focus)="focus1=true" (blur)="focus1=false">
+                                    <input type="text" name="lastname" [(ngModel)]="lastname" placeholder="Your Last Name..." class="form-control" (focus)="focus1=true" (blur)="focus1=false" />
                                 </div>
                                 <div class="input-group" [ngClass]="{'input-group-focus':focus2===true}">
                                   <div class="input-group-prepend">
                                       <span class="input-group-text"> <i class="now-ui-icons ui-1_email-85"></i></span>
                                   </div>
-                                    <input type="text" name="email" [(ngModel)]="email" class="form-control" placeholder="Your Email..." (focus)="focus2=true" (blur)="focus2=false">
+                                    <input type="text" name="email" [(ngModel)]="email" class="form-control" placeholder="Your Email..." (focus)="focus2=true" (blur)="focus2=false" />
                                 </div>
 
-
+                                
                                 <div class="input-group" [ngClass]="{'input-group-focus':focus===true}">
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">  <i class="now-ui-icons users_circle-08"></i></span>
                                     </div>
-                                      <input type="password" name="password" [(ngModel)]="password" class="form-control" placeholder="Your password..." (focus)="focus=true" (blur)="focus=false">
+                                      <input type="password" name="password" [(ngModel)]="password" class="form-control" placeholder="Your password..." (focus)="focus=true" (blur)="focus=false" />
                                   </div>
 
                                 
@@ -88,10 +88,12 @@
                                 </div>
                                 <!-- <div class="card-footer text-center">
                                     
-                                    
                                 </div> -->
-                                <input [routerLink]="['/views/login']" type="submit" value="Get started" class="btn btn-primary btn-round btn-lg">
+                                <input type="submit" value="Get started" class="btn btn-primary btn-round btn-lg">
+                                
+                              
                             </form>
+                          
                         </div>
                     </div>
                 </div>
