--- a/thesis/src/app/elements/basicelements/basicelements.component.html
+++ b/thesis/src/app/elements/basicelements/basicelements.component.html
@@ -397,7 +397,7 @@
           <div class="row">
               <div class="col-md-6">
                   <div class="title">
-                      <h4>Customizable Select</h4>
+                      <h4>ble Select</h4>
                   </div>
                   <div class="row">
                       <div class="col-lg-6 col-md-8 col-sm-5">
