--- a/thesis/src/app/views/searchc/searchc.component.html
+++ b/thesis/src/app/views/searchc/searchc.component.html
@@ -61,7 +61,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
-                        <h2 class="title">We are nerd rockstars</h2>
+                        <h2 class="title">Find what you need</h2>
                         <h4 class="description">This is the paragraph where you can write more details about your team. Keep you user engaged by providing meaningful information.</h4>
                     </div>
                 </div>
@@ -182,7 +182,7 @@
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-8 ml-auto mr-auto">
-                        <h2 class="title">Our office is our second home</h2>
+                        <h2 class="title">Pick the perfect for the job </h2>
                         <h4 class="description">Here are some pictures from our office. You can see the place looks like a palace and is fully equiped with everything you need to get the job done.</h4>
                     </div>
                 </div>
