--- a/thesis/src/app/views/create-cv/create-cv.component.html
+++ b/thesis/src/app/views/create-cv/create-cv.component.html
@@ -93,6 +93,21 @@
             </div>
             
             
+            <div class="row" id="space">
+              <div class="col-lg-6 col-md-8 col-sm-5">
+                <app-multiselect
+                [single]="true"
+                [text]="'Field'"
+                [dropdownList]="dropdownList2"
+                [selectedItems]="selectedItems2"
+                (itemSelect)="click($event)"
+                (itemDeSelect)="click($event)"
+                (selectAll)="console.log($event)"
+                (deSelectAll)="console.log($event)"
+                ></app-multiselect>
+              </div> 
+              </div>
+
             <div class="form-group" id="space">
               <label>Your hight school degree</label>
               <textarea name="message" class="form-control" id="message" rows="6"></textarea>
