postjob create cv frontend

--- a/thesis/src/app/shared/navbar3/navbar3.component.html
+++ b/thesis/src/app/shared/navbar3/navbar3.component.html
@@ -5,6 +5,10 @@
             <i class="now-ui-icons users_circle-08"></i>
                 Profil
              </a>
+             <a class="navbar-brand" [routerLink]="['/views/createcv']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+                <i class="now-ui-icons users_circle-08"></i>
+                    Create Cv
+                 </a>
              <a class="navbar-brand" [routerLink]="['/views/searchu']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
                 <i class="now-ui-icons ui-1_zoom-bold"></i>
                 Search
@@ -13,11 +17,11 @@
                 <i class="now-ui-icons ui-1_calendar-60"></i>
                 Calender
              </a>
-             <a class="navbar-brand" [routerLink]="['/views/landing']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+             <a class="navbar-brand"  placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
                 <i class="now-ui-icons ui-2_chat-round"></i>
                 Chat
              </a>
-             <a class="navbar-brand" [routerLink]="['/views/landing']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+             <a class="navbar-brand"  placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
                 <i class="now-ui-icons ui-1_bell-53"></i>
                 Notifications
              </a>
