--- a/thesis/src/app/views/profil/profil.component.html
+++ b/thesis/src/app/views/profil/profil.component.html
@@ -7,10 +7,13 @@
             <div class="photo-container phot">
                 <img src="assets/img/ryan.jpg" alt="">
             </div>
-            <h3 class="title tex">Ryan Scheinder</h3>
-            <p class="category tex">Photographer</p>
+            <h3 class="title tex">{{datas.name}}</h3>
+            <p class="category tex">{{datas.lastname}}</p>
         </div>
     </div>
+    <div>{{datas.email}}</div>
+    <h3 class="title">PROFILE</h3>
+    <div>{{cv.adress}}</div>
     <div class="section">
         <div class="container">
             <h3 class="title">CONTACT INFORMATION</h3>
