--- a/thesis/src/app/shared/navbar2/navbar2.component.html
+++ b/thesis/src/app/shared/navbar2/navbar2.component.html
@@ -16,11 +16,11 @@
                 <i class="now-ui-icons ui-1_calendar-60"></i>
                 Calender
              </a>
-             <a class="navbar-brand" [routerLink]="['/views/landing']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+             <a class="navbar-brand" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
                 <i class="now-ui-icons ui-2_chat-round"></i>
                 Chat
              </a>
-             <a class="navbar-brand" [routerLink]="['/views/landing']" placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
+             <a class="navbar-brand"  placement="bottom" ngbTooltip="Designed by Invision. Coded by Creative Tim">
                 <i class="now-ui-icons ui-1_bell-53"></i>
                 Notifications
              </a>
@@ -31,7 +31,11 @@
             </button>
         </div>
         <div class="collapse navbar-collapse" data-nav-image="assets/img/blurred-image-1.jpg" data-color="orange">
-           
+         <li  class="nav-item">
+            <a class="nav-link btn btn-primary" (click)="logout()" [routerLink]="['/views/login']">
+               <p>LOGOUT</p>
+               </a>
+            </li>
         </div>
     </div>
 </nav>
