--- a/thesis/src/app/views/company/company.component.html
+++ b/thesis/src/app/views/company/company.component.html
@@ -54,17 +54,18 @@
                                   </div>
                                     <input type="text" name="name" [(ngModel)]="name" class="form-control" placeholder="Name..." (focus)="focus=true" (blur)="focus=false">
                                 </div>
+    
                                 <div class="input-group" [ngClass]="{'input-group-focus':focus1===true}">
                                   <div class="input-group-prepend">
                                       <span class="input-group-text">  <i class="now-ui-icons text_caps-small"></i></span>
                                   </div>
-                                    <input type="text" name="lasttname" [(ngModel)]="lastname" placeholder="Adress..." class="form-control" (focus)="focus1=true" (blur)="focus1=false">
+                                    <input type="text" name="adress" [(ngModel)]="adress" placeholder="Adress..." class="form-control" (focus)="focus1=true" (blur)="focus1=false">
                                 </div>
                                 <div class="input-group" [ngClass]="{'input-group-focus':focus2===true}">
                                   <div class="input-group-prepend">
                                       <span class="input-group-text"> <i class="now-ui-icons ui-1_email-85"></i></span>
                                   </div>
-                                <input type="text" name="email" [(ngModel)]="email" class="form-control" placeholder="Phone Number..." (focus)="focus2=true" (blur)="focus2=false">
+                                <input type="text" name="phonenumber" [(ngModel)]="phonenumber" class="form-control" placeholder="Phone Number..." (focus)="focus2=true" (blur)="focus2=false">
                                 </div>
 
                                 <div class="input-group" [ngClass]="{'input-group-focus':focus2===true}">
@@ -73,7 +74,14 @@
                                     </div>
                                   <input type="text" name="email" [(ngModel)]="email" class="form-control" placeholder="Your Email..." (focus)="focus2=true" (blur)="focus2=false">
                                   </div>
+                                  <div class="input-group" [ngClass]="{'input-group-focus':focus2===true}">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"> <i class="now-ui-icons ui-1_email-85"></i></span>
+                                    </div>
+                                  <input type="password" name="password" [(ngModel)]="password" class="form-control" placeholder="Your Password..." (focus)="focus2=true" (blur)="focus2=false">
+                                  </div>
 
+                                 
                                  
 
 
@@ -90,7 +98,7 @@
 
 
                                 </div> -->
-                                <input [routerLink]="['/views/login']" type="submit" value="Get started" class="btn btn-primary btn-round btn-lg">
+                                <input type="submit" value="Get started" class="btn btn-primary btn-round btn-lg">
                             </form>
                         </div>
                     </div>
