--- a/thesis/src/app/views/post/post.component.html
+++ b/thesis/src/app/views/post/post.component.html
@@ -15,7 +15,7 @@
                 <br>
                 <br>
               </p>
-           
+           <form class="form" method="" action=""  (ngSubmit)="onSubmit()">
   
             <div class="row" id="space">
                <div class="col-md-6">
@@ -24,7 +24,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="now-ui-icons ui-1_email-85"></i></span>
                     </div>
-                    <input type="text" class="form-control" placeholder="Company Name..." (focus)="focus1=true"
+                    <input type="text"  name="CompanyName" [(ngModel)]="CompanyName"class="form-control" placeholder="Company Name..." (focus)="focus1=true"
                       (blur)="focus1=false">
                 </div>
                </div>
@@ -36,7 +36,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"> <i class="now-ui-icons tech_mobile"></i></span>
                 </div>
-                <input type="text" placeholder="Number Here..." class="form-control" (focus)="focus2=true"
+                <input type="text" name="OfferTitle" [(ngModel)]="OfferTitle" placeholder="OfferTitle Here..." class="form-control" (focus)="focus2=true"
                   (blur)="focus2=false">
               </div>
             </div> 
@@ -47,7 +47,8 @@
   
               <div class="form-group" id="space">
                 <label>Offer description</label>
-                <textarea name="message" class="form-control" id="message" rows="6"></textarea>
+                <input type="text" name="OfferDescription" [(ngModel)]="OfferDescription" placeholder="Offer description..." class="form-control" (focus)="focus2=true"
+                (blur)="focus2=false">
               </div>
               
             
@@ -58,8 +59,8 @@
                   [text]="'Type of contract'"
                   [dropdownList]="dropdownList"
                   [selectedItems]="selectedItems"
-                  (itemSelect)="console.log($event)"
-                  (itemDeSelect)="console.log($event)"
+                  (itemSelect)="click($event)"
+                  (itemDeSelect)="click($event)"
                   (selectAll)="console.log($event)"
                   (deSelectAll)="console.log($event)"
                   ></app-multiselect>
@@ -69,12 +70,12 @@
                 <div class="row" id="space">
                   <div class="col-lg-6 col-md-8 col-sm-5">
                     <app-multiselect
-                    [single]="false"
+                    [single]="true"
                     [text]="'Salary'"
                     [dropdownList]="dropdownList2"
                     [selectedItems]="selectedItems2"
-                    (itemSelect)="test($event)"
-                    (itemDeSelect)="test($event)"
+                    (itemSelect)="click1($event)"
+                    (itemDeSelect)="click1($event)"
                     (selectAll)="test($event)"
                     (deSelectAll)="test($event)"
                     ></app-multiselect>
@@ -84,12 +85,12 @@
                 <div class="row" id="space">
                 <div class="col-lg-6 col-md-8 col-sm-5">
                   <app-multiselect
-                  [single]="false"
+                  [single]="true"
                   [text]="'Years of experience'"
                   [dropdownList]="dropdownList1"
                   [selectedItems]="selectedItems1"
-                  (itemSelect)="test($event)"
-                  (itemDeSelect)="test($event)"
+                  (itemSelect)="click2($event)"
+                  (itemDeSelect)="click2($event)"
                   (selectAll)="test($event)"
                   (deSelectAll)="test($event)"
                   ></app-multiselect>
@@ -102,7 +103,7 @@
               <div class="submit text-center">
                 <input type="submit" class="btn btn-primary btn-raised btn-round" value="Post" />
               </div>
-  
+            </form>
             </div>
           </div>
         </div>
